- added get banks features
