# api/src/main/java/dev/thiagooliveira/syncmoney/infra/account/api/mapper/BankMapper.java
@@ -3,6 +3,7 @@ package dev.thiagooliveira.syncmoney.infra.account.api.mapper;
 import dev.thiagooliveira.syncmoney.core.account.application.dto.CreateBankInput;
 import dev.thiagooliveira.syncmoney.core.account.domain.model.Bank;
 import dev.thiagooliveira.syncmoney.core.account.domain.model.Currency;
+import dev.thiagooliveira.syncmoney.infra.account.api.dto.GetBanksResponseBody;
 import dev.thiagooliveira.syncmoney.infra.account.api.dto.PostBankRequestBody;
 import dev.thiagooliveira.syncmoney.infra.account.api.dto.PostBankResponseBody;
 import java.util.UUID;
@@ -15,6 +16,8 @@ public interface BankMapper {
       UUID organizationId, PostBankRequestBody postBankRequestBody);
 
   PostBankResponseBody mapToPostBankResponseBody(Bank bank);
+
+  GetBanksResponseBody mapToGetBanksResponseBody(Bank bank);
 
   default Currency mapToCurrency(String currency) {
     return Currency.valueOf(currency);
